# CompressDemo

app/: build.gradle
app/src/androidTest/java/com/apkcore/layoutmanagerdemo/: ExampleInstrumentedTest.java
app/src/main/: AndroidManifest.xml
app/src/main/java/com/apkcore/layoutmanagerdemo/: MainActivity.java  MyAdapter.java
app/src/main/res/layout/: activity_main.xml  item.xml
app/src/test/java/com/apkcore/layoutmanagerdemo/: ExampleUnitTest.java
compress/: CMakeLists.txt  build.gradle
compress/src/androidTest/java/com/apkcore/commpress/: ExampleInstrumentedTest.java
compress/src/main/: AndroidManifest.xml
compress/src/main/cpp/: compress.cpp
compress/src/main/java/com/apkcore/compress/: CompressUtil.java
compress/src/main/res/values/: strings.xml
compress/src/test/java/com/apkcore/commpress/: ExampleUnitTest.java
gradle/wrapper/: gradle-wrapper.properties
